# rs_mail_client

./: Cargo.toml
src/: config.rs  decoders.rs  imapsession.rs  lib.rs  main.rs  oauth.rs  tokens_file.rs
src/auth/: mod.rs  oauth.rs  token_manager.rs  token_store.rs
src/daemon/: mod.rs  notifier.rs
src/domain/: email.rs
src/ipc/: mod.rs
src/mail/: decoders.rs  imap_client.rs  mod.rs
src/store/: mod.rs  repo.rs  sqlite.rs
src/terminal/: events.rs  images.rs  mod.rs  state.rs  structs.rs  ui.rs
