[package]
name = "rs_mail_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
oauth2 = "4.4.2"          # oauth2 flows + PKCE
url = "2.5.7"
open = "4.2.0"            # open browser
tiny_http = "0.11"    # tiny local server to catch redirect
serde = { version = "1.0.28", features = ["derive"] }
serde_json = "1.0.145"
imap = "2.4.1"            # IMAP client
native-tls = "0.2.14"    # TLS for imap crate
base64 = "0.21.7"
log = "0.4"
env_logger = "0.11.8"

reqwest = { version = "0.11", features = ["blocking","json","rustls-tls"] }
dirs = "6.0"
toml = "0.9"

keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

mailparse = "0.16"

ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29"
color-eyre = "0.6"

notify-rust = "4"
ctrlc = "3"

clap = { version = "4", features = ["derive"] }

rusqlite = { version = "0.32", features = ["bundled"] }

html2text = "0.16"

ratatui-image = { version = "8", features = ["crossterm"] }
image = "0.25"
